# GatewayFinal

./: CMakeLists.txt  README.md
src/: main_final.cpp
src/control/: .gitignore  README.md  app.py  requirements.txt
src/control/config/: control_config.json  proxy_config.json
src/control/scripts/: anomaly_watch.py  dummy_proxy.py  gen_k8s_endpoints.py  sim_backend_register.py  sim_backend_register_batch.py
src/control/static/: app.js  main.js  style.css
src/control/templates/: index.html
src/core/: CMakeLists.txt  EpollPoller.cpp  EventLoop.h  IOUringPoller.cpp  MemoryManager.h  Poller.cpp  Poller.h  SelectPoller.cpp  main.cpp.bak  start.sh
src/logic/: .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md
src/logic/src/: echo_server.cpp.bak  proxy_main.cpp.bak
src/logic/src/common/: backend_server.h
src/logic/src/logic/: content_engine.cpp  content_engine.h  health_check.cpp  health_check.h  http_parser.cpp  http_parser.h  load_balancer.cpp  load_balancer.h  protocol_convert.cpp  protocol_convert.h
